<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:weightSum="10"
android:background="@drawable/app_background_gradient"
    >

<RelativeLayout
    style="@style/MatchLayout"
    android:layout_weight="8"
    >

    <ImageView
        android:id="@+id/back"
        style="@style/WrapLayout"
        android:padding="20dp"
        android:src="@drawable/ic_chevron_left_grey700"/>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:alpha="0.1"
        android:visibility="visible"
        android:src="@drawable/one"/>

    <RelativeLayout
        style="@style/MatchLayout"
        android:gravity="center"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/name"
                style="@style/header_action_bar"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="Daily Quiz"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>

<ScrollView
    style="@style/MatchLayout"
    android:layout_weight="2"
    android:layout_marginTop="-30dp"
    android:background="@drawable/top_cornor_radius"
    android:orientation="vertical">


    <LinearLayout
        style="@style/MatchLayout"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:weightSum="9">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_margin="20dp"
            android:src="@drawable/logo_quiz"/>

        <TextView
            android:id="@+id/notice_body"
            style="@style/sub_header_18"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_width="match_parent"
            android:text="@string/quiz_benefit"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <Button
                android:id="@+id/home_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/filter"
                android:textColor="@color/white"
                android:background="@drawable/roundable2"
                android:visibility="visible" />

            <Button
                android:id="@+id/home_start"
                android:layout_width="280dp"
                android:layout_height="59dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/roundable2"
                android:text="@string/take_quiz"
                android:textColor="@color/white"
                android:visibility="visible" />


        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/wrap_layout"
            android:layout_gravity="center"
            android:visibility="gone"/>


    </LinearLayout>
</ScrollView>

</LinearLayout>