<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/app_background_gradient"
    >

    <RelativeLayout
        style="@style/MatchLayout"
        android:layout_weight="8"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:alpha="0.1"
            android:visibility="visible"
            android:src="@drawable/one"/>

        <RelativeLayout
            style="@style/MatchLayout"
            android:padding="20dp"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/name"
                    style="@style/header_action_bar"
                    android:layout_width="match_parent"
                    android:text="Settings"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24sp" />


            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-30dp"
        android:background="@drawable/top_cornor_radius"
        android:weightSum="9">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                    <RelativeLayout
                        android:id="@+id/upgrade_premum_layout"
                        style="@style/timeoffelementlayout"
                        android:background="@color/white"
                        android:foreground="?attr/selectableItemBackground">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/upgrade_premum_ic"
                            style="@style/WrapLayout"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="15dp"
                            app:srcCompat="@drawable/ic_arrow_circle_up_24" />


                        <TextView
                            style="@style/edit_text_value_style"
                            android:id="@+id/upgrade_premum"
                            android:layout_marginLeft="26dp"
                            android:layout_toRightOf="@+id/upgrade_premum_ic"
                            android:text="@string/subscribe"
                            android:layout_centerVertical="true"/>

                        <ImageView
                            style="@style/WrapLayout"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="5dp"
                            android:visibility="visible"
                            app:srcCompat="@drawable/ic_chevron_right_grey400"
                            android:layout_marginLeft="5dp" />
                    </RelativeLayout>



                <View
                    android:id="@+id/premium_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <RelativeLayout
                    android:id="@+id/progress_report"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/restore_ic"
                        style="@style/WrapLayout"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="15dp"
                        app:srcCompat="@drawable/ic_graph" />


                    <TextView
                        style="@style/edit_text_value_style"
                        android:id="@+id/restore_label"
                        android:layout_marginLeft="26dp"
                        android:layout_toRightOf="@+id/restore_ic"
                        android:text="@string/progress"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        style="@style/WrapLayout"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:visibility="visible"
                        app:srcCompat="@drawable/ic_chevron_right_grey400"
                        android:layout_marginLeft="5dp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <RelativeLayout
                    android:id="@+id/settings_layout"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:visibility="gone"
                    android:foreground="?attr/selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/setting_image"
                        style="@style/icon_wrapper_style"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="26dp"
                        app:srcCompat="@drawable/ic_school_24" />

                    <TextView
                        android:id="@+id/setting_label"
                        style="@style/edit_text_value_style"
                        android:layout_toRightOf="@+id/setting_image"
                        android:text="@string/school_settings"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        style="@style/WrapLayout"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        app:srcCompat="@drawable/ic_chevron_right_grey400"
                        android:layout_marginLeft="5dp" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:visibility="gone"
                    android:background="@color/divider_color" />


                <RelativeLayout
                    android:id="@+id/faq"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/faq_image"
                        style="@style/WrapLayout"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="26dp"
                        app:srcCompat="@drawable/ic_question_answer_24" />

                    <TextView
                        style="@style/edit_text_value_style"
                        android:id="@+id/faq_label"
                        android:layout_width="wrap_content"
                        android:layout_toRightOf="@+id/faq_image"
                        android:text="@string/faq"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        style="@style/WrapLayout"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        app:srcCompat="@drawable/ic_chevron_right_grey400" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />


                <RelativeLayout
                    android:id="@+id/share_app_layout"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/share_app_image"
                        style="@style/WrapLayout"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="26dp"
                        app:srcCompat="@drawable/ic_outline_share_24" />

                    <TextView
                        style="@style/edit_text_value_style"
                        android:id="@+id/share_app_label"
                        android:layout_width="wrap_content"
                        android:layout_toRightOf="@+id/share_app_image"
                        android:text="@string/share_app"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        style="@style/WrapLayout"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        app:srcCompat="@drawable/ic_chevron_right_grey400" />

                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />


                <RelativeLayout
                    android:id="@+id/rate_us_layout"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/rate_us_image"
                        style="@style/WrapLayout"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="26dp"
                        app:srcCompat="@drawable/ic_outline_rate_review_24" />

                    <TextView
                        style="@style/edit_text_value_style"
                        android:id="@+id/rate_us_label"
                        android:layout_width="wrap_content"
                        android:layout_toRightOf="@+id/rate_us_image"
                        android:text="@string/rate_us"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        style="@style/WrapLayout"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        app:srcCompat="@drawable/ic_chevron_right_grey400" />

                </RelativeLayout>



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />


                <RelativeLayout
                    android:id="@+id/contact_us"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/staff_image"
                        style="@style/WrapLayout"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="26dp"
                        app:srcCompat="@drawable/ic_contact_support_24" />

                    <TextView
                        style="@style/edit_text_value_style"
                        android:id="@+id/staff_label"
                        android:layout_width="wrap_content"
                        android:layout_toRightOf="@+id/staff_image"
                        android:text="@string/contact_us"
                        android:layout_centerVertical="true"/>

                    <ImageView
                        style="@style/WrapLayout"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        app:srcCompat="@drawable/ic_chevron_right_grey400" />

                </RelativeLayout>

                <View
                    android:id="@+id/staff_margin"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <RelativeLayout
                    android:id="@+id/terms_layout"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/service_image"
                        style="@style/icon_wrapper_style"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="26dp"
                        app:srcCompat="@drawable/ic_outline_privacy_tip_24" />

                    <TextView
                        android:id="@+id/services_label"
                        style="@style/edit_text_value_style"
                        android:layout_toEndOf="@+id/service_image"
                        android:layout_toRightOf="@+id/service_image"
                        android:text="@string/terms"
                        android:layout_centerVertical="true"/>
                    <ImageView
                        android:id="@+id/imageView6"
                        style="@style/WrapLayout"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        app:srcCompat="@drawable/ic_chevron_right_grey400" />



                </RelativeLayout>

                <View
                    android:id="@+id/services_margin"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <RelativeLayout
                    android:id="@+id/about_layout"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/category_image"
                        style="@style/icon_wrapper_style"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="26dp"
                        android:src="@drawable/ic_outline_info_24" />

                    <ImageView
                        android:id="@+id/imageView7"
                        style="@style/WrapLayout"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        app:srcCompat="@drawable/ic_chevron_right_grey400" />

                    <TextView
                        android:id="@+id/service_categories_label"
                        style="@style/edit_text_value_style"
                        android:layout_toEndOf="@+id/category_image"
                        android:layout_toRightOf="@+id/category_image"
                        android:text="@string/about"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <View
                    android:id="@+id/service_categories_margin"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <RelativeLayout
                    android:id="@+id/logout"
                    style="@style/timeoffelementlayout"
                    android:background="@color/white"
                    android:foreground="?attr/selectableItemBackground">

                    <ImageView
                        android:id="@+id/class_image"
                        style="@style/icon_wrapper_style"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="13dp"
                        android:layout_marginRight="26dp"
                        app:srcCompat="@drawable/ic_logout_24" />

                    <ImageView
                        style="@style/WrapLayout"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="5dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/ic_chevron_right_grey400" />

                    <TextView
                        android:id="@+id/class_label"
                        style="@style/edit_text_value_style"
                        android:layout_toRightOf="@+id/class_image"
                        android:text="@string/signout"
                        android:layout_centerVertical="true"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider_color" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="150dp"/>

            </LinearLayout>

        </ScrollView>



    </LinearLayout>

</LinearLayout>